[Issue #74] 모임목록 PartyBoard.js - 페이지 이동 설정 완료 1. ctgrRow flex-wrap: wrap 부여해 한 줄 5개 초과 시 다음줄 2. EmptyCtgrs 줄 빈 공간 차지용 빈 카테고리 생성 컴포넌트

--- a/senials_frontend/src/pages/common/MainVer1.module.css
+++ b/senials_frontend/src/pages/common/MainVer1.module.css
@@ -344,14 +344,25 @@
 
 .ctgrRow {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+
+    row-gap: 16px;
     padding: 0 20px;
     margin-bottom: 16px;
 }
 
+.emptyCtgrContainer {
+    flex: none;
+    width: 230px;
+}
+
+
 .ctgrContainer {
     /* ctgrImage - width와 동일하게 설정해야함 */
     max-width: 230px;
+
+    cursor: pointer;
 }
 
 .ctgrImage {
